feat(#2): created macro & tasks and the replay action
